--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         </init-param>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>кгющтуиуеюучфьздузкщоусе.ProductionConfiguration</param-value>
+            <param-value>ru.onebet.exampleproject.configurations.ProductionConfiguration</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup>
