--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>RELEASE</version>
+            <version>LATEST</version>
         </dependency>
 
     </dependencies>
